Fixed spacing issues for mobile

--- a/sajal-sharma/src/assets/css/styles.css
+++ b/sajal-sharma/src/assets/css/styles.css
@@ -3,7 +3,14 @@
 
 /* General */
 .content-row {
-	padding: 35px;
+	padding: 20px 35px;
+	margin: 0;
+}
+
+@media (max-width: 768px) {
+	.content-row {
+		padding: 20px 0;
+	}
 }
 
 .mt-3 {
@@ -24,6 +31,12 @@
 	font-size: medium;
 	font-weight: 400;
 	margin: 0px 75px;
+}
+
+@media (max-width: 768px) {
+	.navbar {
+		margin: 0;
+	}
 }
 
 .navbar-name {
@@ -113,6 +126,7 @@
 @media (max-width: 768px) {
 	.footer {
 		padding: 0;
+		margin: 0;
 	}
 
 	.links {
@@ -121,7 +135,7 @@
 
 	.copyright {
 		text-align: center;
-		margin: 0;
+		margin: 3% 0 25px 0;
 	}
 }
 
